  defaulted value changed from None to () meaning no var-binds.
- Attempt to convert Windows style EOL into UNIX ones in MIB source
  modules appeared to be unnecessary and even destructive to modules
  data in some cases. So the convertion code removed altogether.
- Example configuration for Net-SNMP's snmptrapd added.
- Unnecessary *MibSource explicit initialization calls removed at MibBuilder.
- Fix to isAccessAllowed() error handling at NotificationOriginator. System
  used to crash on access denied condition.

Revision 4.2.3
--------------

- SECURITY FIX: USM subsystem did not verify securityLevel of a request
  to an authoritative SNMP engineinbound against auth/priv protocols
  configured for the user in question. That allowed unauthenticated/unciphered
  access to pysnmp-based Agent even if USM user is configured to provide one.
- Oneliner [Asy6]CommandGenerator now supports optional keyword args
  lookupNames, lookupValues that enable response OID / value looked up at
  MIB and reported as a MibVariable container object carrying relevant
  MIB info.
- Oneliner [Asyn]CommandGenerator now supports symbolic MIB object names to be
  passed within a MibVariable container object which would do a deferred
  MIB lookup for name resolution. This is a new and preferred API which
  obsoletes the tuple-based one (it is still suppored though).
- Oneliner CommandGenerator's class attributes lexicographicMode, maxRows
  and ignoreNonIncreasingOid moved to optional keyword args of nextGen() 
  and bulkGen() methods.
- IPv6/UDP and Local Domain Socket transport interfaces added to the
  oneliner API.
- Mib Instrumentation subsystem re-worked to replace excessive
  MibNode's smiCreate()/smiWrite()/smiDestroy() methods with 
  MibScalarInstance's getValue()/setValue()
- MibTree.readTest[Get]Next() reworked to be called uniformely so
  user could tap on these methods at any level of the MIB tree.
- MibTableColumn.getNextNodeWithValue() unpublished API method obsoleted